--- a/css/about.css
+++ b/css/about.css
@@ -124,7 +124,7 @@
 }
 /* MEDIA QUERYS (PHONE)*/
 @media screen and (max-width: 600px) {
-    .achievement__cards {
+    .achievements__cards {
         grid-template-columns: 1fr 1fr;
         gap: 0.7rem;
     }
